<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin_8">

    <TextView
        android:id="@+id/detail_title"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginEnd="16dp"
        android:text="@string/template_movie_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="0.001dp"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:background="#bbb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title" />


    <TextView
        android:id="@+id/title_date"
        style="@style/TextSpec.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:text="@string/release_date"
        android:paddingTop="@dimen/activity_margin_8"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_title" />
    <TextView
        android:id="@+id/txt_date"
        style="@style/TextSpec.Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        android:text="@string/template_movie_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_date" />
    


    <TextView
        android:id="@+id/title_genre"
        style="@style/TextSpec.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:text="@string/genre"
        android:paddingTop="@dimen/activity_margin_8"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />
    <TextView
        android:id="@+id/txt_genre"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginEnd="@dimen/activity_margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_genre"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/template_genre_text"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_score"
        style="@style/TextSpec.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:text="@string/score"
        android:paddingTop="@dimen/activity_margin_8"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_genre" />
    <TextView
        android:id="@+id/txt_score"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginEnd="@dimen/activity_margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_score"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/template_score_text"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title_runtime"
        style="@style/TextSpec.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:text="@string/duration"
        android:paddingTop="@dimen/activity_margin_8"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_score" />
    <TextView
        android:id="@+id/txt_runtime"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginEnd="@dimen/activity_margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_runtime"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/_1h_40m"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0.001dp"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:background="#bbb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_runtime" />

    <TextView
        android:id="@+id/title_overview"
        style="@style/TextSpec.Field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="16dp"
        android:text="@string/overview"
        android:paddingTop="@dimen/activity_margin_8"
        android:paddingStart="@dimen/activity_margin_8"
        android:paddingEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_runtime" />
    <TextView
        android:id="@+id/txt_overview"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginEnd="@dimen/activity_margin_16"
        android:paddingBottom="@dimen/activity_margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_overview"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/template_movie_desc"
        android:textSize="12sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>